--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "html2pdf.js": "^0.10.3",
+    "js-cookie": "^3.0.5",
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/html2pdf.js": "^0.10.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
